Ajustement de la page accueil et alout d'une section a la page services

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -471,7 +471,7 @@
   }
 }
 
-/* Section Solutions IT */
+/* Section solutions pub IT */
 .solutions-section {
   background: var(--background-light);
   padding: 6rem 0;
@@ -504,6 +504,7 @@
 
 .solutions-text {
   padding-left: 2rem;
+  text-align: left;
 }
 
 .solutions-subtitle {
